syntax = "proto3";

package nitrod;

option go_package = "internal/nitrod";

// Services

service NitroService {
  rpc PhpIniSettings(ChangePhpIniSettingRequest) returns (ServiceResponse) {}
  rpc GetPhpIniSetting(GetPhpIniSettingRequest) returns (ServiceResponse) {}
  rpc DisableXdebug(DisableXdebugRequest) returns (ServiceResponse) {}
  rpc EnableXdebug(EnableXdebugRequest) returns (ServiceResponse) {}
  rpc ImportDatabase(stream ImportDatabaseRequest) returns (ServiceResponse) {}
}

service SystemService {
  rpc Nginx(NginxServiceRequest) returns (ServiceResponse) {}
  rpc PhpFpm(PhpFpmServiceRequest) returns (ServiceResponse) {}
}

// Fields

enum PhpIniSetting {
  MAX_EXECUTION_TIME = 0;
  UPLOAD_MAX_FILESIZE = 1;
  MAX_INPUT_TIME = 2;
  MAX_INPUT_VARS = 3;
  MAX_FILE_UPLOADS = 4;
  MEMORY_LIMIT = 5;
}

enum ServiceAction {
  RESTART = 0;
  STOP = 1;
  START = 2;
}

// Messages

message ChangePhpIniSettingRequest {
  string version = 1;
  PhpIniSetting setting = 2;
  string value = 3;
}

message DisableXdebugRequest {
  string version = 1;
}

message EnableXdebugRequest {
  string version = 1;
}

message GetPhpIniSettingRequest {
  string version = 1;
  string setting = 2;
}

message PhpFpmServiceRequest {
  string version = 1;
  ServiceAction action = 2;
}

message NginxServiceRequest {
  ServiceAction action = 1;
}

message ImportDatabaseRequest {
  string engine = 1;
  string database = 2;
  string container = 3;
  bytes data = 4;
  bool compressed = 5;
  string compressionType = 6;
  bool skipCreate = 7;
}

message ServiceResponse {
  string message = 1;
}
